<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!-- activity_main.xml strings -->
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="number_of_coffees">1</string>
    <string name="minus">-</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="price">$10</string>
    <string name="order">ORDER</string>

    <!-- Order Summary Strings -->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_whipped_cream">add whipped cream? <xliff:g example="true" id="wippedcream">%s</xliff:g></string>
    <string name="order_summary_chocolate">add chocolate? <xliff:g example="true" id="chocolate">%s</xliff:g></string>
    <string name="order_summary_total">Total: <xliff:g example="true" id="price">%s</xliff:g></string>
    <string name="order_summary_thank_you">Thank you!</string>
</resources>
